[gd_scene load_steps=6 format=3 uid="uid://c7k3nan2p5q1r"]

[ext_resource type="Script" path="res://Script/UI/dialogue_box.gd" id="1_dialogue"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_horror_bg"]
bg_color = Color(0.05, 0.05, 0.08, 0.92)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.08, 0.12, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 12
shadow_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_monologue_bg"]
bg_color = Color(0.08, 0.02, 0.04, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.12, 0.18, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 16
shadow_color = Color(0.4, 0, 0.1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.15, 0.18, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.1, 0.15, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.08, 0.12, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.15, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_dialogue")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(1000, 250)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -280.0
offset_right = 500.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_horror_bg")

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 24
text = "陌生人"
horizontal_alignment = 1

[node name="TextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 60.0
offset_right = -350.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.95, 0.92, 0.88, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "对话文本将在这里显示..."
autowrap_mode = 3
scroll_active = false

[node name="ChoicesContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_constants/separation = 12
